# world-model-eval-lab

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: paper-pdf.yml  tests.yml
docs/: 00_thesis.md  01_evaluation_gap.md  01_product_wedge.md  02_metric_taxonomy.md  03_benchmark_cards.md  04_industrial_use_cases.md  05_30_day_prototype_plan.md  06_demo.md  07_cpg.md  _config.yml  index.md  paper.md
docs/_layouts/: default.html
docs/process/: llm_agent_recipe.md
examples/maze_toy/: README.md  environment.py  horizon_sweep_report.json  learned_baseline_report.json  learned_horizon_sweep_report.json  run_baseline.py  run_horizon_sweep.py  run_learned_baseline.py  run_learned_sweep.py  sample_report.json
examples/two_room_toy/: README.md  environment.py  run_baseline.py  sample_report.json
experiments/: GPU_ROADMAP.md  README.md  RERUN_VARIED_INIT.md  _seeding.py  paired_intervals_audit.py  pool_dreamerv3_cpg.py  power_analysis.py
experiments/dmc_acrobot/: README.md  _batched_cem.py  baseline.py  cem_cpg.py  cem_cpg_horizon_sweep.py  cem_cpg_sweep.py  coverage_analysis.py  coverage_mlp_on_tdmpc2.py  cpg.py  dreamerv3_cem_cpg.py  dreamerv3_cpg.py  dreamerv3_latent_cpg.py  learned_baseline.py  obs_noise_perturbation_cpg.py  perturbation_cpg.py  pool_horizon_sweep.py  tdmpc2_cpg.py
experiments/dmc_cartpole/: cem_cpg.py  coverage_mlp_on_tdmpc2.py  dreamerv3_cpg.py  pool_cpg.py  tdmpc2_cpg.py
experiments/dmc_reacher/: cem_cpg.py  coverage_mlp_on_tdmpc2.py  dreamerv3_cpg.py  pool_cpg.py  tdmpc2_cpg.py
experiments/obs_robustness/: README.md  cartpole_obs_robustness.py  observation_augmentation.py
experiments/offline_downstream/: README.md  correlate.py  maze_quality_sweep.py  tdmpc2_offline_metrics.py
experiments/robolab_audit/: README.md  audit.py
infra/terraform/: .gitignore  README.md  job_train.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
paper/: .gitignore  ARXIV_SUBMISSION.md  Makefile  README.md  V018_OUTLINE.md  build_figures.py  main.bbl  main.tex  references.bib
paper/figures/: cartpole_capacity.tex  coverage_histogram.tex  cpg_vs_data.tex  cross_env_cpg.tex  power_detectability.tex
results/: MODEL_TABLE.md  README.md  power_analysis.json
results/dmc_acrobot/: baseline_random.json  cem_cpg.json  cem_cpg_horizon_sweep.json  cem_cpg_horizon_sweep_seed1.json  cem_cpg_horizon_sweep_seed2.json  cem_cpg_sweep.json  coverage.json  coverage_mlp_on_tdmpc2_cpg.json  cpg.json  cpg_sweep.json  dreamerv3_cem_cpg.json  dreamerv3_cpg.json  dreamerv3_cpg_pooled.json  dreamerv3_cpg_seed1.json  dreamerv3_cpg_seed2.json  dreamerv3_latent_cpg.json  learned_random_rollouts.json  obs_noise_perturbation_cpg_h15.json  perturbation_cpg.json  tdmpc2_cpg.json
results/dmc_cartpole/: cem_cpg.json  cem_cpg_pooled.json  cem_cpg_seed1.json  cem_cpg_seed2.json  cem_cpg_size5_pooled.json  cem_cpg_size5_seed0.json  cem_cpg_size5_seed1.json  cem_cpg_size5_seed2.json  coverage_mlp_on_tdmpc2_cpg.json  coverage_mlp_on_tdmpc2_cpg_pooled.json  coverage_mlp_on_tdmpc2_cpg_seed1.json  coverage_mlp_on_tdmpc2_cpg_seed2.json  coverage_mlp_on_tdmpc2_cpg_size5_pooled.json  coverage_mlp_on_tdmpc2_cpg_size5_seed0.json  coverage_mlp_on_tdmpc2_cpg_size5_seed1.json  coverage_mlp_on_tdmpc2_cpg_size5_seed2.json  dreamerv3_cpg.json  tdmpc2_cpg.json  tdmpc2_cpg_pooled.json  tdmpc2_cpg_seed1.json  tdmpc2_cpg_seed2.json  tdmpc2_cpg_size5_pooled.json  tdmpc2_cpg_size5_seed0.json  tdmpc2_cpg_size5_seed1.json  tdmpc2_cpg_size5_seed2.json
results/dmc_reacher/: cem_cpg.json  cem_cpg_pooled.json  cem_cpg_seed1.json  cem_cpg_seed2.json  coverage_mlp_on_tdmpc2_cpg.json  coverage_mlp_on_tdmpc2_cpg_pooled.json  coverage_mlp_on_tdmpc2_cpg_seed1.json  coverage_mlp_on_tdmpc2_cpg_seed2.json  dreamerv3_cpg.json  dreamerv3_cpg_pooled.json  dreamerv3_cpg_seed1.json  dreamerv3_cpg_seed2.json  tdmpc2_cpg.json  tdmpc2_cpg_pooled.json  tdmpc2_cpg_seed1.json  tdmpc2_cpg_seed2.json
results/paired_intervals/: paired_vs_ac.json
scripts/: build_model_table.py  render_visuals.py  setup_dreamerv3.sh  setup_tdmpc2.sh
tests/: test_benchmark_runner.py  test_bradley_terry.py  test_cem_planner.py  test_cli.py  test_correlation.py  test_cpg.py  test_dmc_acrobot.py  test_dmc_cartpole.py  test_dmc_reacher.py  test_dreamerv3_adapter.py  test_dreamerv3_upstream_equivalence.py  test_experiments.py  test_learned_dynamics.py  test_markdown_export.py  test_maze_toy.py  test_metrics.py  test_mlp_world_model.py  test_model_table.py  test_observation_augmentation.py  test_offline_downstream.py  test_paired_intervals.py  test_paired_intervals_audit.py  test_perturbations.py  test_power_analysis.py  test_robolab_audit.py  test_tabular_world_model.py  test_tdmpc2_offline_metrics.py  test_two_room_toy.py
(+30 files in other folders)
