[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wmel"
version = "0.6.0"
description = "World Model Evaluation Lab - a product-oriented benchmark framework for action-conditioned world models."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "World Model Evaluation Lab contributors" },
]
keywords = [
    "world-model",
    "world-models",
    "evaluation",
    "ml-evaluation",
    "benchmark",
    "benchmarking",
    "planning",
    "action-conditioned",
    "model-based-rl",
    "decision-grade",
    "horizon-sweep",
    "perturbation",
    "scorecard",
    "methodology",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
learned = [
    # Used by `wmel.adapters.learned_dynamics_torch` to demonstrate the
    # contract on a PyTorch-trained MLP. CPU-only; no GPU required.
    "torch>=2.0",
]

[project.urls]
Homepage = "https://example.invalid/world-model-eval-lab"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".", "src"]
